--- a/bakery.html
+++ b/bakery.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <h3>Салати</h3>
+        <h3>Випічка</h3>
     <article>
         <h4 class="card-title">
             Піца з червоною рибою
